argocd-manifests/niffler-feature-template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: niffler-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: niffler-frontend
  template:
    metadata:
      labels:
        app: niffler-frontend
    spec:
      containers:
        - name: frontend
          image: nginx:alpine
          ports:
            - containerPort: 80
