argocd-manifests/niffler-feature-template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: niffler-frontend
spec:
  selector:
    app: niffler-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
