argocd-manifests/niffler-feature-template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: niffler-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: niffler-feature.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: niffler-frontend
                port:
                  number: 80
